--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>This line is here to show how merging works.</p>
 <p>A new line in our file!</p>
   <p>hello from kp</p>
+  <p>helllloooooooooooooooooooooooooooooooooooooooooo</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html> 
